<resources>
    <string name="app_name" translatable="false">Anime Twist</string>
    <string name="seasonal_anime_title">Top airing</string>
    <string name="header_title">Fall season has started!</string>
    <string name="header_text">We\'re adding over 50 new ongoing shows to Anime Twist this season. Find out if your favourite new anime will be added here <a href="https://bit.ly/2SKsfpC\" target="_blank\">https://bit.ly/2SKsfpC</a></string>
    <string name="search_item_title">Search</string>
    <string name="search_hint">Search for anime</string>
    <string name="ongoing_text">ONGOING</string>
    <string name="hot_picks_title_text">Hot picks 🔥</string>
    <string name="no_search_results_text">NANI? This must be the work of an enemy stand! No results were found.</string>
    <string name="anime_poster_image_desc">Anime poster</string>
    <string name="top_rated_header_text">Top rated</string>
    <string name="log_in_menutext">Log in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bottom_menuitem">Home</string>
    <string name="acct_bottom_menuitem">Account</string>
    <string name="username_til_hint">Username</string>
    <string name="password_til_hint">Password</string>
    <string name="email_til_hint">Email</string>
    <string name="password_confirm_til_hint">Enter password again</string>
    <string name="register_fab">Register</string>
    <string name="email_err">Enter a valid email.</string>
    <string name="pass_match_err">Passwords do not match</string>
    <string name="pass_len_err">Password must be greater than 7 characters</string>
    <string name="sign_up_text">Sign up</string>
    <string name="toggle_switch_theme">Switch theme</string>
    <string name="ep_count">%d episodes</string>
    <string name="score_value">Score: %s</string>
    <string name="episode_number_xxx">Episode number %d</string>
    <string name="episode_info">EP%d</string>
    <string name="existing_account_login_text">Already have an account? Log in</string>
    <string name="scroll_fab_content_desc">Scroll down to bottom of anime list</string>
    <string name="account_not_exist">Don\'t have an account? Register</string>
    <string name="username_email_til">Username/Email</string>
    <string name="username_error">4-20 letters/dashes/underscores</string>
    <string name="email_username_error">Must not be blank!</string>
    <string name="twist_moe">Anime Twist</string>
    <string name="default_remaining">00:00</string>
    <string name="server_error_502">Twist API Server is unreachable</string>
    <string name="client_error_408">Request timed out.</string>
    <string name="no_connection">Check your internet connection.</string>
    <string name="error_default">An unexpected error occurred.</string>
    <string name="next_episode_countdown">Next episode in: %s</string>
    <string name="next_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="retry_button">Retry</string>
    <string name="currently_watching_title">Recently watched</string>
</resources>
